--- a/src/GSvar/Background/BackgroundJobDialog.ui
+++ b/src/GSvar/Background/BackgroundJobDialog.ui
@@ -37,6 +37,12 @@
    </property>
    <item>
     <widget class="QTableWidget" name="jobs">
+     <property name="selectionMode">
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
