SampleSimilarity: added parameter 'roi_hg38_wes_wgs'

--- a/src/cppNGS/cppNGS.qrc
+++ b/src/cppNGS/cppNGS.qrc
@@ -13,5 +13,6 @@
         <file>Resources/qcML.obo</file>
         <file>Resources/hg38_cyto_band.bed</file>
         <file>Resources/hg38_ensembl_transcript_matches.tsv</file>
+        <file>Resources/hg38_coding_highconf_all_kits.bed</file>
     </qresource>
 </RCC>
