--- a/src/GSvar/MainWindow.ui
+++ b/src/GSvar/MainWindow.ui
@@ -757,7 +757,7 @@
     <string>Open by name</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+Shift+O</string>
+    <string>Ctrl+Alt+O</string>
    </property>
   </action>
   <action name="actionDesignSubpanel">
