--- a/src/GSvar/SettingsDialog.ui
+++ b/src/GSvar/SettingsDialog.ui
@@ -81,6 +81,23 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="btn_view">
+       <property name="text">
+        <string>View</string>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -105,7 +122,7 @@
    <item row="2" column="2">
     <widget class="QStackedWidget" name="stack">
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="page_general">
       <layout class="QFormLayout" name="formLayout">
@@ -299,6 +316,45 @@
           </size>
          </property>
         </spacer>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="page_view">
+      <layout class="QFormLayout" name="formLayout_5">
+       <item row="0" column="0">
+        <widget class="QGroupBox" name="groupBox_processedSampleTab">
+         <property name="title">
+          <string>Processed Sample Tab</string>
+         </property>
+         <layout class="QFormLayout" name="formLayout_6">
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>Adjust large numbers in QC table: </string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="view_adjust_large_numbers">
+            <item>
+             <property name="text">
+              <string>raw counts</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>T, G, M, k modifier</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>use ',' as thousands separator</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </item>
       </layout>
      </widget>
