GSvar: Added Link to SpliceAI Lookup page via the SpliceAI value context menu (variant details dock).

--- a/src/GSvar/VariantDetailsDockWidget.ui
+++ b/src/GSvar/VariantDetailsDockWidget.ui
@@ -798,6 +798,9 @@
               <height>0</height>
              </size>
             </property>
+            <property name="contextMenuPolicy">
+             <enum>Qt::CustomContextMenu</enum>
+            </property>
             <property name="text">
              <string/>
             </property>
