GSvar: added dialog for variant with pathogenic WT allele

--- a/src/GSvar/GSvar.qrc
+++ b/src/GSvar/GSvar.qrc
@@ -128,5 +128,6 @@
         <file>Resources/CCR80_GRCh38.bed</file>
         <file>Icons/NovaSeqX.png</file>
         <file>Icons/multithreading.png</file>
+        <file>Icons/wt_pathogenic.png</file>
     </qresource>
 </RCC>
